# IBIS-UTh

./: .gitignore  ChangeLog  README.md  pyproject.toml  requirements.txt
datasets/: Faraji_2021_data.xlsx  Moseley_2015_All_IBIS_Input.xlsx
examples/: Cheng et al. 2018 test.ipynb  Faraji2021.ipynb  Moseley et al. 2015.ipynb  Ridley_2015.ipynb  Schorndorf et al. 2023.ipynb
src/ibis/: IBIS_Bounds_and_Uncertainties.py  IBIS_Configuration.py  IBIS_Data_Formatting.py  IBIS_MCMC_Initial_Th_opt_test.py  IBIS_Main.py  IBIS_Thoth_V2.py  IBIS_strat_Hiatus.py  IBIS_stratv2.py  USeries_Age_Equations.py
