[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibis-uth"
version = "0.1.4"
description = "IBIS: Integrated Bayesian Initial-Th correction + age-depth modeling for speleothems"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "tqdm",
  "joblib",
  "dill",
  "scikit-learn",
  "openpyxl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
